--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -23,7 +23,7 @@ menu:
     submenu:
       - name: GitHub
         icon: github
-        link: http://github.com/alainpham
+        link: https://github.com/Loyal7
       - name: LinkedIn
         icon: linkedin-square
         link: http://www.linkedin.com/in/alainpham
