--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-# Site settings
-title: 博客名字 # 你的博客名字，可以定义修订
+﻿# Site settings
+title: Loyal # 你的博客名字，可以定义修订
 header-img: "img/green.jpg"
 tagline: "cn"  
 description: "这是我的博客"  # 一句话描述你的博客
 baseurl: ""
-url: "http://cnfeat"  # 此处填写你的博客地址 
+url: "Loyal7.github.io"  # 此处填写你的博客地址 
 
 # About/contact
 owner: 
-  name: "作者名字" # 填写作者信息：名字
-  email: X@gmail.com # 填写作者信息：邮箱
-  bio: "你的博客描述" # 填写作者信息：博客描述
+  name: Loyal # 填写作者信息：名字
+  email: liumin123ookk@qq.com # 填写作者信息：邮箱
+  bio: 仅作为记录 # 填写作者信息：博客描述
 
 # Data
 gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
@@ -18,7 +18,7 @@ favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
 twitter_username: 
-github_username: 
+github_username: Loyal7
 facebook_username: 
 weibo_username: 
 zhihu_username: 
