--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "Loyal" # 你的名字
+      author: "Loyal" 
       header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
