--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ﻿# Site settings
 title: Loyal Blog
-SEOTitle: Loyal的博客 | Loyal Blog
+SEOTitle: 我的博客 | Loyal Blog
 header-img: img/home-bg.jpg
 email: liumin123ookk@qq.com
 description: "写点东西。"
