--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ﻿# Site settings
-title: Loyal Blog
-SEOTitle: 我的博客 | Loyal Blog
+title: Hux Blog
+SEOTitle: 黄玄的博客 | Hux Blog
 header-img: img/home-bg.jpg
 email: liumin123ookk@qq.com
 description: "写点东西。"
