--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 黄玄的博客 | Hux Blog
 header-img: img/home-bg.jpg
 email: liumin123ookk@qq.com
 description: "写点东西。"
-keyword: "Loyal7, Loyal的博客, Loyal Blog, 博客, 互联网, Unity, C#"
+keyword: "Loyal7,Loyal的博客,Loyal Blog,博客|互联网,Unity,C#"
 url: "https://github.com/Loyal7"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
